Added all detectors at this time, and music disc!
Functionality is complete, and will be laid out on wiki, as well as in code here obv.

We have a build!!!!!!

--- a/gradle.properties
+++ b/gradle.properties
@@ -44,11 +44,11 @@ mapping_version=2024.11.17-1.21.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=detectorsmod
 # The human-readable display name for the mod.
-mod_name=Detectors Mod
+mod_name=Metal Detectors Mod
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=1.0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -57,3 +57,8 @@ mod_group_id=net.emilyonaire.detectors
 mod_authors=Emilyonaire
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=A Basic Mod that adds usable metal/ore detectors!\nHeavily inspired by the show Detectorists.
+# The URL to the mod's homepage. This is a simple text string that is used for display purposes in the mod list.
+mod_url=https://github.com/Emilyonaire/detectorsmod
+# The mod's logo file. This is a simple text string that is used for display purposes in the mod list.
+# The logo file must be located in the resources directory and must be a PNG file.
+mod_logo=assets/detectorsmod/logo.png
